Version 2.03.11 - 
==================================
  Fix bcache waiting for IO completion with failing disks.
  Configure use own python path name order to prefer using python3.
  Add configure --enable-editline support as an alternative to readline.
  Enhance reporting and error handling when creating thin volumes.
  Enable vgsplit for VDO volumes.
  Lvextend of vdo pool volumes ensure at least 1 new VDO slab is added.
  Use revert_lv() on reload error path after vg_revert().
  Configure --with-integrity enabled.
  Restore lost signal blocking while VG lock is held.
  Improve estimation of needed extents when creating thin-pool.
  Use extra 1% when resizing thin-pool metadata LV with --use-policy.
  Enhance --use-policy percentage rounding.
  Configure --with-vdo and --with-writecache as internal segments.
  Improving VDO man page examples.
  Switch code base to use flexible array syntax.
  Fix 64bit math when calculation cachevol size.
  Preserve uint32_t for seqno handling.
  Switch from mmap to plain read when loading regular files.
  Fix missing device closing on wiping error path.
  Update lvmvdo man page and better explain DISCARD usage.

Version 2.03.10 - 09th August 2020
==================================
  Add writecache and integrity support to lvmdbusd.
  Generate unique cachevol name when default required from lvcreate.
  Converting RAID1 volume to one with same number of legs now succeeds with a
  warning.
  Fix conversion to raid from striped lagging type.
  Fix conversion to 'mirrored' mirror log with larger regionsize.
  Zero pool metadata on allocation (disable with allocation/zero_metadata=0).
  Failure in zeroing or wiping will fail command (bypass with -Zn, -Wn).
  Add lvcreate of new cache or writecache lv with single command.
  Fix running out of free buffers for async writing for larger writes.
  Add integrity with raid capability.
  Fix support for lvconvert --repair used by foreign apps (i.e. Docker).

Version 2.03.09 - 26th March 2020