@@ -1,5 +1,6 @@
 Version 2.03.11 - 
 ==================================
+  Fix bcache when device has too many failing writes.
   Fix bcache waiting for IO completion with failing disks.
   Configure use own python path name order to prefer using python3.
   Add configure --enable-editline support as an alternative to readline.
